# agentops-mis-mvp

./: .env.example  .gitignore  AGENTS.md  AGENT_WORKFLOW.md  BASE_INDEX.md  LICENSE  PROJECT_SPEC.md  README.md  pyproject.toml  secret_registry.md  server.py
agentops_mis_cli/: __init__.py  __main__.py  _build_backend.py  advance_loop_policy.py  agentops.py  cli.py  codex_runtime.py  host.py  host_log.py  http_transport.py  redaction.py  relay_activation.py  relay_activation_controller.py  relay_activation_evidence.py  relay_activation_journal.py  relay_activation_preview.py  relay_activation_recovery.py  relay_activation_recovery_controller.py  relay_activation_recovery_executor.py  relay_activation_recovery_preview.py  relay_activation_scan.py  relay_admin.py  relay_connector_service.py  relay_connector_supervisor.py  relay_control.py  relay_daemon.py  relay_epoch_store.py  relay_host_tls_proxy.py  relay_restart.py  relay_sni_router.py  relay_systemd_mutation.py  relay_systemd_read.py  worker.py  (+2 more)
incubator/research-lab/: README.md  pyproject.toml
incubator/research-lab/docs/: AGENT_PLAN.md  ARCHITECTURE.md  ASYNC_EXECUTION.md  EXPERIMENT_PROTOCOL.md  OPEN_SOURCE_ABSORPTION.md  SOURCE_COMPLETENESS.md  SSH_EXECUTOR.md
incubator/research-lab/examples/: confirmatory_experiment.json  servers.example.json  ssh_experiment.json
incubator/research-lab/research_lab/: __init__.py  cli.py  executors.py  integrity.py  protocol.py  provenance.py  redaction.py  resources.py  runtime.py  server_profiles.py  ssh_executor.py
incubator/research-lab/tests/: test_cli.py  test_protocol.py  test_provenance.py
(+1228 files in other folders)
