[build-system]
requires = []
build-backend = "agentops_mis_cli._build_backend"
backend-path = ["."]

[project]
name = "agentops-mis-cli"
version = "0.1.0"
description = "Installable AgentOps MIS Agent Gateway CLI wrapper."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary local MVP" }
authors = [
  { name = "AgentOps MIS" }
]
dependencies = []

[project.scripts]
agentops = "agentops_mis_cli.cli:main"
agentops-relay = "agentops_mis_cli.relay_daemon:main"
agentops-worker = "agentops_mis_cli.worker:main"
