[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentops-research-lab"
version = "0.3.0"
description = "Standalone asynchronous experiment-integrity control plane"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
research-lab = "research_lab.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["research_lab*"]
